fixed spacing register form

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -113,7 +113,7 @@
 .input-dot { font-size: 16px; }
 .input-dot::after { content: " *"; color: red; }
 
-#register-btn { margin: 50px 0 50px 12.5%; height: 60px; width: 75%; font-size: 16px; color: white; background: limegreen; }
+#register-btn { margin: 80px 0 50px 12.5%; height: 60px; width: 75%; font-size: 16px; color: white; background: limegreen; }
 
 #about {
     margin: 0 0 20px 10%;
@@ -508,6 +508,7 @@ input:focus { color: black; outline-color: green; outline-offset: 1px; }
     #register-form > input { height: 40px; width: 80%; margin: 0 auto 20px auto; }
     #register-form > input::placeholder { font-size: 14px; }
     .input-dot { font-size: 14px; width: 80%; margin: auto; }
+    #register-btn { margin: 40px 0 50px 12.5%; }
     #home-right { width: 100%; }
     #about-left > div { font-size: 20px; }
     #about-left p { font-size: 14px; }
